@@ -11,7 +11,7 @@ import android.widget.TextView;
 import androidx.test.core.app.ApplicationProvider;
 import androidx.test.ext.junit.runners.AndroidJUnit4;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
@@ -43,13 +43,13 @@ public class ShadowArrayAdapterTest {
   @SuppressWarnings("BoxedPrimitiveConstructor")
   public void verifyListContent() {
     assertEquals(3, arrayAdapter.getCount());
-    assertEquals(new Integer(1), arrayAdapter.getItem(0));
-    assertEquals(new Integer(2), arrayAdapter.getItem(1));
-    assertEquals(new Integer(3), arrayAdapter.getItem(2));
+    assertEquals(Integer.valueOf(1), arrayAdapter.getItem(0));
+    assertEquals(Integer.valueOf(2), arrayAdapter.getItem(1));
+    assertEquals(Integer.valueOf(3), arrayAdapter.getItem(2));
   }
 
   @Test
-  public void usesTextViewResourceIdToSetTextWithinListItemView() throws Exception {
+  public void usesTextViewResourceIdToSetTextWithinListItemView() {
     ListView parent = new ListView(context);
     ArrayAdapter<String> arrayAdapter =
         new ArrayAdapter<>(context, R.layout.main, R.id.title, new String[] {"first value"});
@@ -78,7 +78,7 @@ public class ShadowArrayAdapterTest {
     assertThat(Shadows.shadowOf(arrayAdapter2).getTextViewResourceId()).isEqualTo(0);
 
     ArrayAdapter<String> arrayAdapter3 =
-        new ArrayAdapter<>(context, R.id.title, Arrays.asList(new String[] {"first value"}));
+        new ArrayAdapter<>(context, R.id.title, Collections.singletonList("first value"));
 
     //this assertion may look a little backwards since R.id.title is labeled
     //textViewResourceId in the constructor parameter list, but the output is correct.
@@ -88,22 +88,22 @@ public class ShadowArrayAdapterTest {
   }
 
   @Test
-  public void shouldClear() throws Exception {
+  public void shouldClear() {
     arrayAdapter.clear();
     assertEquals(0, arrayAdapter.getCount());
   }
 
   @Test
   @SuppressWarnings("BoxedPrimitiveConstructor")
-  public void test_remove() throws Exception {
+  public void test_remove() {
     Integer firstItem = arrayAdapter.getItem(0);
     assertEquals(3, arrayAdapter.getCount());
-    assertEquals(new Integer(1), firstItem);
+    assertEquals(Integer.valueOf(1), firstItem);
 
     arrayAdapter.remove(firstItem);
 
     assertEquals(2, arrayAdapter.getCount());
-    assertEquals(new Integer(2), arrayAdapter.getItem(0));
-    assertEquals(new Integer(3), arrayAdapter.getItem(1));
+    assertEquals(Integer.valueOf(2), arrayAdapter.getItem(0));
+    assertEquals(Integer.valueOf(3), arrayAdapter.getItem(1));
   }
 }
